@@ -36,6 +36,7 @@ Version 1.4.23 - SVN
     rendering mode" setting in the configuration tool (#3240356).
   - Added "search_index_before" hook (analog of the "mailbox_index_before"
     hook)
+  - Made performance improvements in security token handling
 
 Version 1.4.22 - 12 July 2011
 -----------------------------
